updated about page and header

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,27 +1,14 @@
 <%- include("partials/header.ejs") %>
-<link rel="stylesheet" type="text/css" href="hello.css">
-	
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-				<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>IMGS</a>
-			</div>
-			<div class="collapse navbar-collapse" id="bs-nav-demo">
-				<ul class="nav navbar-nav">
-					<li><a href="/about">About</a></li>
-				</ul>				
-			</div>
-		</div>
-	</nav>
+<link rel="stylesheet" type="text/css" href="hello.css">	
 
 	<p>
-		<h1>
-			Thank you for visiting the website  <i class="fas fa-smile showing myicon"></i> !
-		</h1>
+		<h1>This is an Image Gallery of some free photos.</h1>
+		<br>
+		<p>This is my first website.</p>
+		<p>Please fill up the feedback form if you liked the website by clicking the button below.</p>
+
+		<a class="btn btn-warning" href="https://forms.gle/GDLZJCi6RtoNqqgDA">Click here to send your feedback to me.</a>
+		<h4>
+			Thank you for visiting  <i class="fas fa-smile showing myicon"></i> !
+		</h4>
 	</p>
