--- a/public/hello.css
+++ b/public/hello.css
@@ -2,6 +2,8 @@ body{
 	padding:70px;
 	background-color:#ed24ff;
 	color:#eadfeb;
+	text-align: center;
+	font-size: 2rem;
 }
 .navbar-inverse{
 	background: #2c3e50;
@@ -13,4 +15,8 @@ body{
 
 .navbar-inverse .navbar-brand {
     color: white;
+}
+
+a{
+	color: #eb4034;
 }
